--- a/firmware/aware01_firmware.ioc
+++ b/firmware/aware01_firmware.ioc
@@ -19,10 +19,10 @@ Dma.SPI1_RX.1.Direction=DMA_PERIPH_TO_MEMORY
 Dma.SPI1_RX.1.EventEnable=DISABLE
 Dma.SPI1_RX.1.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.SPI1_RX.1.Instance=DMA1_Stream0
-Dma.SPI1_RX.1.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.SPI1_RX.1.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
 Dma.SPI1_RX.1.MemInc=DMA_MINC_ENABLE
 Dma.SPI1_RX.1.Mode=DMA_CIRCULAR
-Dma.SPI1_RX.1.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.SPI1_RX.1.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
 Dma.SPI1_RX.1.PeriphInc=DMA_PINC_DISABLE
 Dma.SPI1_RX.1.Polarity=HAL_DMAMUX_REQ_GEN_RISING
 Dma.SPI1_RX.1.Priority=DMA_PRIORITY_HIGH
@@ -37,10 +37,10 @@ Dma.SPI1_TX.0.Direction=DMA_MEMORY_TO_PERIPH
 Dma.SPI1_TX.0.EventEnable=DISABLE
 Dma.SPI1_TX.0.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.SPI1_TX.0.Instance=DMA1_Stream1
-Dma.SPI1_TX.0.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.SPI1_TX.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
 Dma.SPI1_TX.0.MemInc=DMA_MINC_ENABLE
 Dma.SPI1_TX.0.Mode=DMA_CIRCULAR
-Dma.SPI1_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.SPI1_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
 Dma.SPI1_TX.0.PeriphInc=DMA_PINC_DISABLE
 Dma.SPI1_TX.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
 Dma.SPI1_TX.0.Priority=DMA_PRIORITY_HIGH
@@ -66,12 +66,12 @@ I2C1.Speed=50
 I2C1.Timing=0x70514BFF
 I2S1.AudioFreq=I2S_AUDIOFREQ_48K
 I2S1.CPOL=I2S_CPOL_LOW
-I2S1.DataFormat=I2S_DATAFORMAT_24B
-I2S1.ErrorAudioFreq=-0.48 %
+I2S1.DataFormat=I2S_DATAFORMAT_16B
+I2S1.ErrorAudioFreq=0.0 %
 I2S1.FirstBit=I2S_FIRSTBIT_MSB
 I2S1.IPParameters=Instance,RealAudioFreq,ErrorAudioFreq,AudioFreq,CPOL,DataFormat,Standard,FirstBit
 I2S1.Instance=SPI$Index
-I2S1.RealAudioFreq=47.765 KHz
+I2S1.RealAudioFreq=47.999 KHz
 I2S1.Standard=I2S_STANDARD_PHILIPS
 KeepUserPlacement=false
 MMTAppReg1.MEMORYMAP.AppRegionName=DTCMRAM
@@ -186,11 +186,11 @@ Mcu.Pin55=PA13
 Mcu.Pin56=PA14
 Mcu.Pin57=PD0
 Mcu.Pin58=PD1
-Mcu.Pin59=PD7
+Mcu.Pin59=PG9
 Mcu.Pin6=PF6
 Mcu.Pin60=PG15
 Mcu.Pin61=PB3
-Mcu.Pin62=PB4
+Mcu.Pin62=PB5
 Mcu.Pin63=PB6
 Mcu.Pin64=PB7
 Mcu.Pin65=PE0
@@ -252,9 +252,11 @@ PB1.GPIO_Label=FADER2_IN
 PB1.Signal=ADCx_INP5
 PB3.Mode=Trace_Asynchronous_SW
 PB3.Signal=DEBUG_JTDO-SWO
-PB4.Locked=true
-PB4.Mode=Full_Duplex_Master
-PB4.Signal=I2S1_SDI
+PB5.GPIOParameters=GPIO_PuPd
+PB5.GPIO_PuPd=GPIO_NOPULL
+PB5.Locked=true
+PB5.Mode=Full_Duplex_Master
+PB5.Signal=I2S1_SDO
 PB6.GPIOParameters=GPIO_Speed,GPIO_Pu,GPIO_Mode
 PB6.GPIO_Mode=GPIO_MODE_AF_OD
 PB6.GPIO_Pu=GPIO_NOPULL
@@ -301,10 +303,6 @@ PD1.Signal=FMC_D3_DA3
 PD10.Signal=FMC_D15_DA15
 PD14.Signal=FMC_D0_DA0
 PD15.Signal=FMC_D1_DA1
-PD7.GPIOParameters=GPIO_PuPd
-PD7.GPIO_PuPd=GPIO_PULLUP
-PD7.Mode=Full_Duplex_Master
-PD7.Signal=I2S1_SDO
 PD8.Signal=FMC_D13_DA13
 PD9.Signal=FMC_D14_DA14
 PE0.Signal=FMC_NBL0
@@ -351,11 +349,14 @@ PG15.Signal=FMC_SDNCAS
 PG4.Signal=FMC_A14_BA0
 PG5.Signal=FMC_A15_BA1
 PG8.Signal=FMC_SDCLK
+PG9.Locked=true
+PG9.Mode=Full_Duplex_Master
+PG9.Signal=I2S1_SDI
 PH0-OSC_IN.Mode=HSE-External-Oscillator
 PH0-OSC_IN.Signal=RCC_OSC_IN
 PH1-OSC_OUT.Mode=HSE-External-Oscillator
 PH1-OSC_OUT.Signal=RCC_OSC_OUT
-PinOutPanel.RotationAngle=0
+PinOutPanel.RotationAngle=180
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=6
@@ -411,24 +412,24 @@ RCC.DFSDMACLkFreq_Value=270000000
 RCC.DFSDMFreq_Value=135000000
 RCC.DIVM1=2
 RCC.DIVM2=16
-RCC.DIVM3=5
+RCC.DIVM3=24
 RCC.DIVN1=45
 RCC.DIVN2=286
-RCC.DIVN3=63
+RCC.DIVN3=344
 RCC.DIVP1Freq_Value=270000000
 RCC.DIVP2=11
 RCC.DIVP2Freq_Value=39000000
-RCC.DIVP3=25
-RCC.DIVP3Freq_Value=12228000
+RCC.DIVP3=28
+RCC.DIVP3Freq_Value=12287998.744419644
 RCC.DIVQ1Freq_Value=270000000
 RCC.DIVQ2=6
 RCC.DIVQ2Freq_Value=71500000
-RCC.DIVQ3Freq_Value=152850000
+RCC.DIVQ3Freq_Value=172031982.421875
 RCC.DIVR1Freq_Value=270000000
 RCC.DIVR2=3
 RCC.DIVR2Freq_Value=143000000
-RCC.DIVR3=1
-RCC.DIVR3Freq_Value=305700000
+RCC.DIVR3=6
+RCC.DIVR3Freq_Value=57343994.140625
 RCC.FDCANFreq_Value=270000000
 RCC.FMCCLockSelection=RCC_FMCCLKSOURCE_PLL2
 RCC.FMCFreq_Value=143000000
@@ -443,11 +444,11 @@ RCC.LPTIM1Freq_Value=135000000
 RCC.LPTIM2Freq_Value=135000000
 RCC.LPTIM345Freq_Value=135000000
 RCC.LPUART1Freq_Value=135000000
-RCC.LTDCFreq_Value=305700000
+RCC.LTDCFreq_Value=57343994.140625
 RCC.MCO1PinFreq_Value=64000000
 RCC.MCO2PinFreq_Value=270000000
 RCC.PLL2FRACN=0
-RCC.PLL3FRACN=5632
+RCC.PLL3FRACN=524
 RCC.PLLFRACN=0
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.QSPIFreq_Value=270000000
@@ -459,7 +460,7 @@ RCC.SAI2BFreq_Value=270000000
 RCC.SDMMCFreq_Value=270000000
 RCC.SPDIFRXFreq_Value=270000000
 RCC.SPI123CLockSelection=RCC_SPI123CLKSOURCE_PLL3
-RCC.SPI123Freq_Value=12228000
+RCC.SPI123Freq_Value=12287998.744419644
 RCC.SPI45Freq_Value=135000000
 RCC.SPI6Freq_Value=135000000
 RCC.SRDPPRE=RCC_APB4_DIV2
@@ -474,10 +475,10 @@ RCC.USART234578Freq_Value=135000000
 RCC.USBFreq_Value=270000000
 RCC.VCO1OutputFreq_Value=540000000
 RCC.VCO2OutputFreq_Value=429000000
-RCC.VCO3OutputFreq_Value=305700000
+RCC.VCO3OutputFreq_Value=344063964.84375
 RCC.VCOInput1Freq_Value=12000000
 RCC.VCOInput2Freq_Value=1500000
-RCC.VCOInput3Freq_Value=4800000
+RCC.VCOInput3Freq_Value=1000000
 SH.ADCx_INP11.0=ADC1_INP11,IN11-Single-Ended
 SH.ADCx_INP11.ConfNb=1
 SH.ADCx_INP14.0=ADC1_INP14,IN14-Single-Ended
