--- a/firmware2_1/firmware2_1.ioc
+++ b/firmware2_1/firmware2_1.ioc
@@ -1,6 +1,6 @@
 #MicroXplorer Configuration settings - do not modify
 ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_5
-ADC1.ClockPrescaler=ADC_CLOCK_ASYNC_DIV2
+ADC1.ClockPrescaler=ADC_CLOCK_ASYNC_DIV4
 ADC1.IPParameters=Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,OffsetSignedSaturation-1\#ChannelRegularConversion,NbrOfConversionFlag,master,ClockPrescaler
 ADC1.NbrOfConversionFlag=1
 ADC1.OffsetNumber-1\#ChannelRegularConversion=ADC_OFFSET_NONE
@@ -9,43 +9,118 @@ ADC1.Rank-1\#ChannelRegularConversion=1
 ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
 ADC1.master=1
 ADC2.Channel-5\#ChannelRegularConversion=ADC_CHANNEL_10
-ADC2.ClockPrescaler=ADC_CLOCK_ASYNC_DIV2
-ADC2.IPParameters=Rank-5\#ChannelRegularConversion,Channel-5\#ChannelRegularConversion,SamplingTime-5\#ChannelRegularConversion,OffsetNumber-5\#ChannelRegularConversion,OffsetSignedSaturation-5\#ChannelRegularConversion,NbrOfConversionFlag,ClockPrescaler
+ADC2.IPParameters=Rank-5\#ChannelRegularConversion,Channel-5\#ChannelRegularConversion,SamplingTime-5\#ChannelRegularConversion,OffsetNumber-5\#ChannelRegularConversion,OffsetSignedSaturation-5\#ChannelRegularConversion,NbrOfConversionFlag
 ADC2.NbrOfConversionFlag=1
 ADC2.OffsetNumber-5\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC2.OffsetSignedSaturation-5\#ChannelRegularConversion=DISABLE
 ADC2.Rank-5\#ChannelRegularConversion=1
 ADC2.SamplingTime-5\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
-CAD.formats=
-CAD.pinconfig=
+CAD.formats=[]
+CAD.pinconfig=Dual
 CAD.provider=
 CORTEX_M7.IPParameters=default_mode_Activation
 CORTEX_M7.default_mode_Activation=1
+Dma.Request0=SPI1_RX
+Dma.Request1=SPI1_TX
+Dma.RequestsNb=2
+Dma.SPI1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SPI1_RX.0.EventEnable=DISABLE
+Dma.SPI1_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI1_RX.0.Instance=DMA1_Stream0
+Dma.SPI1_RX.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.SPI1_RX.0.MemInc=DMA_MINC_ENABLE
+Dma.SPI1_RX.0.Mode=DMA_NORMAL
+Dma.SPI1_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.SPI1_RX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI1_RX.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.SPI1_RX.0.Priority=DMA_PRIORITY_VERY_HIGH
+Dma.SPI1_RX.0.RequestNumber=1
+Dma.SPI1_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.SPI1_RX.0.SignalID=NONE
+Dma.SPI1_RX.0.SyncEnable=DISABLE
+Dma.SPI1_RX.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.SPI1_RX.0.SyncRequestNumber=1
+Dma.SPI1_RX.0.SyncSignalID=NONE
+Dma.SPI1_TX.1.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SPI1_TX.1.EventEnable=DISABLE
+Dma.SPI1_TX.1.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI1_TX.1.Instance=DMA1_Stream1
+Dma.SPI1_TX.1.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.SPI1_TX.1.MemInc=DMA_MINC_ENABLE
+Dma.SPI1_TX.1.Mode=DMA_NORMAL
+Dma.SPI1_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.SPI1_TX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI1_TX.1.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.SPI1_TX.1.Priority=DMA_PRIORITY_VERY_HIGH
+Dma.SPI1_TX.1.RequestNumber=1
+Dma.SPI1_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.SPI1_TX.1.SignalID=NONE
+Dma.SPI1_TX.1.SyncEnable=DISABLE
+Dma.SPI1_TX.1.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.SPI1_TX.1.SyncRequestNumber=1
+Dma.SPI1_TX.1.SyncSignalID=NONE
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C1.IPParameters=Timing
-I2C1.Timing=0x00707CBB
-I2S1.ErrorAudioFreq=0.8 %
+I2C1.Timing=0x109096E2
+I2S1.ErrorAudioFreq=0.0 %
 I2S1.IPParameters=Instance,RealAudioFreq,ErrorAudioFreq
 I2S1.Instance=SPI$Index
-I2S1.RealAudioFreq=8.064 KHz
+I2S1.RealAudioFreq=8.0 KHz
 KeepUserPlacement=false
-MMTAppRegionsCount=0
+MMTAppReg1.MEMORYMAP.AppRegionName=DTCMRAM
+MMTAppReg1.MEMORYMAP.ContextName=Cortex-M7NS
+MMTAppReg1.MEMORYMAP.CoreName=Arm Cortex-M7
+MMTAppReg1.MEMORYMAP.IPParameters=StartAddress,Size,CoreName,ContextName,Name
+MMTAppReg1.MEMORYMAP.Name=DTCMRAM
+MMTAppReg1.MEMORYMAP.Size=131072
+MMTAppReg1.MEMORYMAP.StartAddress=0x20000000
+MMTAppReg2.MEMORYMAP.AppRegionName=RAM
+MMTAppReg2.MEMORYMAP.ContextName=Cortex-M7NS
+MMTAppReg2.MEMORYMAP.CoreName=Arm Cortex-M7
+MMTAppReg2.MEMORYMAP.DefaultDataRegion=true
+MMTAppReg2.MEMORYMAP.IPParameters=StartAddress,Size,CoreName,ContextName,Name,DefaultDataRegion
+MMTAppReg2.MEMORYMAP.Name=RAM
+MMTAppReg2.MEMORYMAP.Size=1048576
+MMTAppReg2.MEMORYMAP.StartAddress=0x24000000
+MMTAppReg3.MEMORYMAP.AppRegionName=ITCMRAM
+MMTAppReg3.MEMORYMAP.Cacheability=WTRA
+MMTAppReg3.MEMORYMAP.ContextName=Cortex-M7NS
+MMTAppReg3.MEMORYMAP.CoreName=Arm Cortex-M7
+MMTAppReg3.MEMORYMAP.IPParameters=StartAddress,Size,CoreName,ContextName,Name,Cacheability
+MMTAppReg3.MEMORYMAP.Name=ITCMRAM
+MMTAppReg3.MEMORYMAP.Size=65536
+MMTAppReg3.MEMORYMAP.StartAddress=0x00000000
+MMTAppReg4.MEMORYMAP.AP=RO_priv_only
+MMTAppReg4.MEMORYMAP.AppRegionName=FLASH
+MMTAppReg4.MEMORYMAP.Cacheability=WTRA
+MMTAppReg4.MEMORYMAP.ContextName=Cortex-M7NS
+MMTAppReg4.MEMORYMAP.CoreName=Arm Cortex-M7
+MMTAppReg4.MEMORYMAP.DefaultCodeRegion=true
+MMTAppReg4.MEMORYMAP.IPParameters=StartAddress,Size,CoreName,MemType,ContextName,Name,AP,Cacheability,DefaultCodeRegion,ISRRegion,RootBootRegion
+MMTAppReg4.MEMORYMAP.ISRRegion=true
+MMTAppReg4.MEMORYMAP.MemType=ROM
+MMTAppReg4.MEMORYMAP.Name=FLASH
+MMTAppReg4.MEMORYMAP.RootBootRegion=true
+MMTAppReg4.MEMORYMAP.Size=2097152
+MMTAppReg4.MEMORYMAP.StartAddress=0x08000000
+MMTAppRegionsCount=4
 MMTConfigApplied=false
 Mcu.CPN=STM32H7A3RIT6TR
 Mcu.Family=STM32H7
 Mcu.IP0=ADC1
 Mcu.IP1=ADC2
-Mcu.IP10=UART4
+Mcu.IP10=SYS
+Mcu.IP11=UART4
 Mcu.IP2=CORTEX_M7
 Mcu.IP3=DEBUG
-Mcu.IP4=I2C1
-Mcu.IP5=I2S1
-Mcu.IP6=MEMORYMAP
-Mcu.IP7=NVIC
-Mcu.IP8=RCC
-Mcu.IP9=SYS
-Mcu.IPNb=11
+Mcu.IP4=DMA
+Mcu.IP5=I2C1
+Mcu.IP6=I2S1
+Mcu.IP7=MEMORYMAP
+Mcu.IP8=NVIC
+Mcu.IP9=RCC
+Mcu.IPNb=12
 Mcu.Name=STM32H7A3R(G-I)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PH0-OSC_IN
@@ -90,6 +165,8 @@ Mcu.UserName=STM32H7A3RITx
 MxCube.Version=6.15.0
 MxDb.Version=DB.6.0.150
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.DMA1_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA1_Stream1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -203,7 +280,7 @@ ProjectManager.BackupPrevious=false
 ProjectManager.CompilerLinker=GCC
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
-ProjectManager.CoupleFile=false
+ProjectManager.CoupleFile=true
 ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
@@ -224,88 +301,96 @@ ProjectManager.ProjectName=firmware2_1
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
-ProjectManager.TargetToolchain=EWARM V8.50
+ProjectManager.TargetToolchain=CMake
 ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_ADC2_Init-ADC2-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_I2S1_Init-I2S1-false-HAL-true,7-MX_UART4_Init-UART4-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
-RCC.ADCFreq_Value=42666666.666666664
-RCC.AHB12Freq_Value=64000000
-RCC.AHB4Freq_Value=64000000
-RCC.APB1Freq_Value=32000000
-RCC.APB2Freq_Value=64000000
-RCC.APB3Freq_Value=64000000
-RCC.APB4Freq_Value=64000000
-RCC.AXIClockFreq_Value=64000000
-RCC.CDCPREFreq_Value=64000000
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_ADC2_Init-ADC2-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_I2S1_Init-I2S1-false-HAL-true,8-MX_UART4_Init-UART4-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+RCC.ADCFreq_Value=48000000
+RCC.AHB12Freq_Value=153600000
+RCC.AHB4Freq_Value=153600000
+RCC.APB1Freq_Value=76800000
+RCC.APB2Freq_Value=76800000
+RCC.APB3Freq_Value=76800000
+RCC.APB4Freq_Value=76800000
+RCC.AXIClockFreq_Value=153600000
+RCC.CDCPREFreq_Value=153600000
+RCC.CDPPRE=RCC_APB3_DIV2
 RCC.CDPPRE1=RCC_APB1_DIV2
+RCC.CDPPRE2=RCC_APB2_DIV2
 RCC.CECFreq_Value=32000
 RCC.CKPERFreq_Value=64000000
-RCC.CortexFreq_Value=64000000
-RCC.CpuClockFreq_Value=64000000
+RCC.CortexFreq_Value=153600000
+RCC.CpuClockFreq_Value=153600000
 RCC.DAC1Freq_Value=32000
 RCC.DAC2Freq_Value=32000
-RCC.DFSDM2ACLkFreq_Value=64000000
-RCC.DFSDM2Freq_Value=64000000
-RCC.DFSDMACLkFreq_Value=64000000
-RCC.DFSDMFreq_Value=64000000
-RCC.DIVM1=4
-RCC.DIVM2=4
-RCC.DIVN1=8
-RCC.DIVN2=8
-RCC.DIVP1Freq_Value=64000000
+RCC.DFSDM2ACLkFreq_Value=76800000
+RCC.DFSDM2Freq_Value=76800000
+RCC.DFSDMACLkFreq_Value=12288000
+RCC.DFSDMFreq_Value=76800000
+RCC.DIVM1=5
+RCC.DIVM2=2
+RCC.DIVM3=24
+RCC.DIVN1=64
+RCC.DIVN2=12
+RCC.DIVP1Freq_Value=153600000
 RCC.DIVP2=3
-RCC.DIVP2Freq_Value=42666666.666666664
-RCC.DIVP3Freq_Value=129000000
-RCC.DIVQ1Freq_Value=64000000
-RCC.DIVQ2Freq_Value=64000000
-RCC.DIVQ3Freq_Value=129000000
-RCC.DIVR1Freq_Value=64000000
-RCC.DIVR2Freq_Value=64000000
-RCC.DIVR3Freq_Value=129000000
-RCC.FDCANFreq_Value=64000000
-RCC.FMCFreq_Value=64000000
+RCC.DIVP2Freq_Value=48000000
+RCC.DIVP3Freq_Value=64500000
+RCC.DIVQ1=25
+RCC.DIVQ1Freq_Value=12288000
+RCC.DIVQ2=6
+RCC.DIVQ2Freq_Value=24000000
+RCC.DIVQ3Freq_Value=64500000
+RCC.DIVR1Freq_Value=153600000
+RCC.DIVR2Freq_Value=72000000
+RCC.DIVR3Freq_Value=64500000
+RCC.FDCANFreq_Value=12288000
+RCC.FMCFreq_Value=153600000
 RCC.FamilyName=M
-RCC.HCLK3ClockFreq_Value=64000000
-RCC.HCLKFreq_Value=64000000
-RCC.I2C123Freq_Value=32000000
-RCC.I2C4Freq_Value=64000000
-RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CDCPREFreq_Value,CDPPRE1,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,DAC1Freq_Value,DAC2Freq_Value,DFSDM2ACLkFreq_Value,DFSDM2Freq_Value,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVM2,DIVN1,DIVN2,DIVP1Freq_Value,DIVP2,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL2FRACN,PLLFRACN,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI2AFreq_Value,SAI2BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
-RCC.LPTIM1Freq_Value=32000000
-RCC.LPTIM2Freq_Value=64000000
-RCC.LPTIM345Freq_Value=64000000
-RCC.LPUART1Freq_Value=64000000
-RCC.LTDCFreq_Value=129000000
+RCC.HCLK3ClockFreq_Value=153600000
+RCC.HCLKFreq_Value=153600000
+RCC.I2C123Freq_Value=76800000
+RCC.I2C4Freq_Value=76800000
+RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CDCPREFreq_Value,CDPPRE,CDPPRE1,CDPPRE2,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,DAC1Freq_Value,DAC2Freq_Value,DFSDM2ACLkFreq_Value,DFSDM2Freq_Value,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVM2,DIVM3,DIVN1,DIVN2,DIVP1Freq_Value,DIVP2,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1,DIVQ1Freq_Value,DIVQ2,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL2FRACN,PLLFRACN,PLLSourceVirtual,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI2AFreq_Value,SAI2BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SRDPPRE,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
+RCC.LPTIM1Freq_Value=76800000
+RCC.LPTIM2Freq_Value=76800000
+RCC.LPTIM345Freq_Value=76800000
+RCC.LPUART1Freq_Value=76800000
+RCC.LTDCFreq_Value=64500000
 RCC.MCO1PinFreq_Value=64000000
-RCC.MCO2PinFreq_Value=64000000
+RCC.MCO2PinFreq_Value=153600000
 RCC.PLL2FRACN=0
 RCC.PLLFRACN=0
-RCC.QSPIFreq_Value=64000000
+RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
+RCC.QSPIFreq_Value=153600000
 RCC.RNGFreq_Value=48000000
 RCC.RTCFreq_Value=32000
-RCC.SAI1Freq_Value=64000000
-RCC.SAI2AFreq_Value=64000000
-RCC.SAI2BFreq_Value=64000000
-RCC.SDMMCFreq_Value=64000000
-RCC.SPDIFRXFreq_Value=64000000
-RCC.SPI123Freq_Value=64000000
-RCC.SPI45Freq_Value=32000000
-RCC.SPI6Freq_Value=64000000
-RCC.SWPMI1Freq_Value=32000000
-RCC.SYSCLKFreq_VALUE=64000000
-RCC.Tim1OutputFreq_Value=64000000
-RCC.Tim2OutputFreq_Value=64000000
-RCC.TraceFreq_Value=64000000
-RCC.USART16Freq_Value=64000000
-RCC.USART234578Freq_Value=32000000
-RCC.USBFreq_Value=64000000
-RCC.VCO1OutputFreq_Value=128000000
-RCC.VCO2OutputFreq_Value=128000000
-RCC.VCO3OutputFreq_Value=258000000
-RCC.VCOInput1Freq_Value=16000000
-RCC.VCOInput2Freq_Value=16000000
-RCC.VCOInput3Freq_Value=2000000
+RCC.SAI1Freq_Value=12288000
+RCC.SAI2AFreq_Value=12288000
+RCC.SAI2BFreq_Value=12288000
+RCC.SDMMCFreq_Value=12288000
+RCC.SPDIFRXFreq_Value=12288000
+RCC.SPI123Freq_Value=12288000
+RCC.SPI45Freq_Value=76800000
+RCC.SPI6Freq_Value=76800000
+RCC.SRDPPRE=RCC_APB4_DIV2
+RCC.SWPMI1Freq_Value=76800000
+RCC.SYSCLKFreq_VALUE=153600000
+RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
+RCC.Tim1OutputFreq_Value=153600000
+RCC.Tim2OutputFreq_Value=153600000
+RCC.TraceFreq_Value=153600000
+RCC.USART16Freq_Value=76800000
+RCC.USART234578Freq_Value=76800000
+RCC.USBFreq_Value=12288000
+RCC.VCO1OutputFreq_Value=307200000
+RCC.VCO2OutputFreq_Value=144000000
+RCC.VCO3OutputFreq_Value=129000000
+RCC.VCOInput1Freq_Value=4800000
+RCC.VCOInput2Freq_Value=12000000
+RCC.VCOInput3Freq_Value=1000000
 SH.ADCx_INN12.0=ADC2_INN12,IN12-Differential
 SH.ADCx_INN12.ConfNb=1
 SH.ADCx_INP10.0=ADC2_INP10,IN10-Single-Ended
