--- a/firmware2_1/firmware2_1.ioc
+++ b/firmware2_1/firmware2_1.ioc
@@ -1,28 +1,100 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_5
+ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_7
+ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_8
+ADC1.Channel-3\#ChannelRegularConversion=ADC_CHANNEL_9
+ADC1.Channel-4\#ChannelRegularConversion=ADC_CHANNEL_5
 ADC1.ClockPrescaler=ADC_CLOCK_ASYNC_DIV4
-ADC1.IPParameters=Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,OffsetSignedSaturation-1\#ChannelRegularConversion,NbrOfConversionFlag,master,ClockPrescaler
+ADC1.ContinuousConvMode=ENABLE
+ADC1.IPParameters=Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,OffsetSignedSaturation-1\#ChannelRegularConversion,NbrOfConversionFlag,master,ClockPrescaler,ContinuousConvMode,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,OffsetNumber-2\#ChannelRegularConversion,OffsetSignedSaturation-2\#ChannelRegularConversion,Rank-3\#ChannelRegularConversion,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,OffsetNumber-3\#ChannelRegularConversion,OffsetSignedSaturation-3\#ChannelRegularConversion,Rank-4\#ChannelRegularConversion,Channel-4\#ChannelRegularConversion,SamplingTime-4\#ChannelRegularConversion,OffsetNumber-4\#ChannelRegularConversion,OffsetSignedSaturation-4\#ChannelRegularConversion,NbrOfConversion
+ADC1.NbrOfConversion=4
 ADC1.NbrOfConversionFlag=1
 ADC1.OffsetNumber-1\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.OffsetNumber-2\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.OffsetNumber-3\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.OffsetNumber-4\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC1.OffsetSignedSaturation-1\#ChannelRegularConversion=DISABLE
+ADC1.OffsetSignedSaturation-2\#ChannelRegularConversion=DISABLE
+ADC1.OffsetSignedSaturation-3\#ChannelRegularConversion=DISABLE
+ADC1.OffsetSignedSaturation-4\#ChannelRegularConversion=DISABLE
 ADC1.Rank-1\#ChannelRegularConversion=1
+ADC1.Rank-2\#ChannelRegularConversion=2
+ADC1.Rank-3\#ChannelRegularConversion=3
+ADC1.Rank-4\#ChannelRegularConversion=4
 ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.SamplingTime-3\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.SamplingTime-4\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
 ADC1.master=1
 ADC2.Channel-5\#ChannelRegularConversion=ADC_CHANNEL_10
-ADC2.IPParameters=Rank-5\#ChannelRegularConversion,Channel-5\#ChannelRegularConversion,SamplingTime-5\#ChannelRegularConversion,OffsetNumber-5\#ChannelRegularConversion,OffsetSignedSaturation-5\#ChannelRegularConversion,NbrOfConversionFlag
+ADC2.Channel-6\#ChannelRegularConversion=ADC_CHANNEL_11
+ADC2.Channel-7\#ChannelRegularConversion=ADC_CHANNEL_12
+ADC2.Channel-8\#ChannelRegularConversion=ADC_CHANNEL_13
+ADC2.ContinuousConvMode=ENABLE
+ADC2.IPParameters=Rank-5\#ChannelRegularConversion,Channel-5\#ChannelRegularConversion,SamplingTime-5\#ChannelRegularConversion,OffsetNumber-5\#ChannelRegularConversion,OffsetSignedSaturation-5\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode,Rank-6\#ChannelRegularConversion,Channel-6\#ChannelRegularConversion,SamplingTime-6\#ChannelRegularConversion,OffsetNumber-6\#ChannelRegularConversion,OffsetSignedSaturation-6\#ChannelRegularConversion,Rank-7\#ChannelRegularConversion,Channel-7\#ChannelRegularConversion,SamplingTime-7\#ChannelRegularConversion,OffsetNumber-7\#ChannelRegularConversion,OffsetSignedSaturation-7\#ChannelRegularConversion,Rank-8\#ChannelRegularConversion,Channel-8\#ChannelRegularConversion,SamplingTime-8\#ChannelRegularConversion,OffsetNumber-8\#ChannelRegularConversion,OffsetSignedSaturation-8\#ChannelRegularConversion,NbrOfConversion
+ADC2.NbrOfConversion=4
 ADC2.NbrOfConversionFlag=1
 ADC2.OffsetNumber-5\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC2.OffsetNumber-6\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC2.OffsetNumber-7\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC2.OffsetNumber-8\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC2.OffsetSignedSaturation-5\#ChannelRegularConversion=DISABLE
+ADC2.OffsetSignedSaturation-6\#ChannelRegularConversion=DISABLE
+ADC2.OffsetSignedSaturation-7\#ChannelRegularConversion=DISABLE
+ADC2.OffsetSignedSaturation-8\#ChannelRegularConversion=DISABLE
 ADC2.Rank-5\#ChannelRegularConversion=1
+ADC2.Rank-6\#ChannelRegularConversion=2
+ADC2.Rank-7\#ChannelRegularConversion=3
+ADC2.Rank-8\#ChannelRegularConversion=4
 ADC2.SamplingTime-5\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC2.SamplingTime-6\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC2.SamplingTime-7\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC2.SamplingTime-8\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
 CAD.formats=[]
 CAD.pinconfig=Dual
 CAD.provider=
 CORTEX_M7.IPParameters=default_mode_Activation
 CORTEX_M7.default_mode_Activation=1
+Dma.ADC1.2.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC1.2.EventEnable=DISABLE
+Dma.ADC1.2.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.ADC1.2.Instance=DMA1_Stream2
+Dma.ADC1.2.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.ADC1.2.MemInc=DMA_MINC_ENABLE
+Dma.ADC1.2.Mode=DMA_CIRCULAR
+Dma.ADC1.2.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.ADC1.2.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC1.2.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.ADC1.2.Priority=DMA_PRIORITY_LOW
+Dma.ADC1.2.RequestNumber=1
+Dma.ADC1.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.ADC1.2.SignalID=NONE
+Dma.ADC1.2.SyncEnable=DISABLE
+Dma.ADC1.2.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.ADC1.2.SyncRequestNumber=1
+Dma.ADC1.2.SyncSignalID=NONE
+Dma.ADC2.3.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC2.3.EventEnable=DISABLE
+Dma.ADC2.3.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.ADC2.3.Instance=DMA1_Stream3
+Dma.ADC2.3.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.ADC2.3.MemInc=DMA_MINC_ENABLE
+Dma.ADC2.3.Mode=DMA_NORMAL
+Dma.ADC2.3.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.ADC2.3.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC2.3.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.ADC2.3.Priority=DMA_PRIORITY_LOW
+Dma.ADC2.3.RequestNumber=1
+Dma.ADC2.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.ADC2.3.SignalID=NONE
+Dma.ADC2.3.SyncEnable=DISABLE
+Dma.ADC2.3.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.ADC2.3.SyncRequestNumber=1
+Dma.ADC2.3.SyncSignalID=NONE
 Dma.Request0=SPI1_RX
 Dma.Request1=SPI1_TX
-Dma.RequestsNb=2
+Dma.Request2=ADC1
+Dma.Request3=ADC2
+Dma.RequestsNb=4
 Dma.SPI1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.SPI1_RX.0.EventEnable=DISABLE
 Dma.SPI1_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
@@ -173,6 +245,8 @@ MxDb.Version=DB.6.0.150
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.DMA1_Stream0_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA1_Stream1_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
+NVIC.DMA1_Stream2_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
+NVIC.DMA1_Stream3_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
@@ -268,7 +342,7 @@ PC2.Signal=ADCx_INP12
 PC3.GPIOParameters=GPIO_Label
 PC3.GPIO_Label=CV3_IN
 PC3.Locked=true
-PC3.Signal=ADCx_INN12
+PC3.Signal=SharedAnalog_PC3
 PC4.Mode=Master_Clock_Activated
 PC4.Signal=I2S1_MCK
 PC5.GPIOParameters=GPIO_Label
@@ -293,8 +367,8 @@ ProjectManager.CompilerLinker=GCC
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=true
-ProjectManager.CustomerFirmwarePackage=
-ProjectManager.DefaultFWLocation=true
+ProjectManager.CustomerFirmwarePackage=../../../STM32Cube/Repository/STM32Cube_FW_H7_V1.12.1
+ProjectManager.DefaultFWLocation=false
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32H7A3RITx
 ProjectManager.FirmwarePackage=STM32Cube FW_H7 V1.12.1
@@ -302,7 +376,7 @@ ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
-ProjectManager.LastFirmware=true
+ProjectManager.LastFirmware=false
 ProjectManager.LibraryCopy=0
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
@@ -403,13 +477,11 @@ RCC.VCO3OutputFreq_Value=129000000
 RCC.VCOInput1Freq_Value=4800000
 RCC.VCOInput2Freq_Value=12000000
 RCC.VCOInput3Freq_Value=1000000
-SH.ADCx_INN12.0=ADC2_INN12,IN12-Differential
-SH.ADCx_INN12.ConfNb=1
 SH.ADCx_INP10.0=ADC2_INP10,IN10-Single-Ended
 SH.ADCx_INP10.ConfNb=1
 SH.ADCx_INP11.0=ADC2_INP11,IN11-Single-Ended
 SH.ADCx_INP11.ConfNb=1
-SH.ADCx_INP12.0=ADC2_INP12,IN12-Differential
+SH.ADCx_INP12.0=ADC2_INP12,IN12-Single-Ended
 SH.ADCx_INP12.ConfNb=1
 SH.ADCx_INP5.0=ADC1_INP5,IN5-Single-Ended
 SH.ADCx_INP5.ConfNb=1
@@ -419,6 +491,9 @@ SH.ADCx_INP8.0=ADC1_INP8,IN8-Single-Ended
 SH.ADCx_INP8.ConfNb=1
 SH.ADCx_INP9.0=ADC1_INP9,IN9-Single-Ended
 SH.ADCx_INP9.ConfNb=1
+SH.SharedAnalog_PC3.0=ADC2_INN12
+SH.SharedAnalog_PC3.1=ADC2_INP13,IN13-Single-Ended
+SH.SharedAnalog_PC3.ConfNb=2
 STMicroelectronics.X-CUBE-ALGOBUILD.1.4.0.DSPOoLibraryJjLibrary_Checked=true
 STMicroelectronics.X-CUBE-ALGOBUILD.1.4.0.IPParameters=LibraryCcDSPOoLibraryJjDSPOoLibrary
 STMicroelectronics.X-CUBE-ALGOBUILD.1.4.0.LibraryCcDSPOoLibraryJjDSPOoLibrary=true
@@ -432,3 +507,4 @@ VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.4.0_1.4.0.Sign
 VP_SYS_VS_tim7.Mode=TIM7
 VP_SYS_VS_tim7.Signal=SYS_VS_tim7
 board=custom
+rtos.0.ip=FREERTOS
